[package]
name = "scratch-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.97"
zip = "0.6.6"
